--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 			defer
 			src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.3/dist/cdn.min.js"
 		></script>
+		<meta name="theme-color" content="#ea580c" />
+		<meta
+			name="description"
+			content="Joshua Morales, graphic designer and web developer"
+		/>
+		<meta
+			name="keywords"
+			content="Joshua Morales, Graphic Design, Web Development, Frontend"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Joshua Morales: Design + Dev</title>
 	</head>
