--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Joshua Morales: Design + Dev</title>
 	</head>
-	<body class="w-full h-full">
+	<body class="w-full h-full bg-stone-900">
 		<div class="w-full h-full" id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
